# rocm_smi_lib_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  collaboration-proposal.md  feature_request.md
rsmi/: CMakeLists.txt  lib.c  main.c  structs.h
rsmi/queries/: identifier.h  init.h  memory.h  pcie.h  performance.h  physical.h  power.h
src/: bindings.rs  device.rs  error.rs  lib.rs  main.rs
src/functions/: mod.rs  supported_fn.rs
src/queries/: common_structures.rs  error.rs  identifiers.rs  memory.rs  mod.rs  pcie.rs  performance.rs  physical.rs  power.rs  topo.rs  version.rs
src/tests/: mod.rs
