[package]
name = "rocm_smi_lib"
version = "0.1.17"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WhiskyAKM"]
description = "easy to use crate for using rocm-smi from rust"
repository = "https://github.com/PTFOPlayer/rocm_lib"
categories = ["api-bindings", "external-ffi-bindings", "hardware-support"]
keywords = ["radeon", "rsmi", "hip", "rocm", "gpu"]

exclude = [
    "rocm_smi_lib",
    "rocm_smi_lib/*"
]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.147"
rocm_smi_lib_sys ={ version = "0.1.4"}

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[features]
vendored = ["rocm_smi_lib_sys/vendored"]
fn_query = []
device = []