[package]
name = "rocm_smi_lib"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WhiskyAKM"]
description = "easy to use crate for using rocm-smi from rust"
repository = "https://github.com/PTFOPlayer/rocm_lib_sys"
categories = ["api-bindings", "external-ffi-bindings", "hardware-support"]
keywords = ["radeon", "rsmi", "hip", "rocm", "gpu"]

exclude = [
    "rocm_smi_lib",
    "rocm_smi_lib/*"
]

[dependencies]
libc = "0.2.171"
rocm_smi_lib_sys = "0.3.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[features]
default = ["device"]
fn_query = []
device = []
process = []